--- a/E and p.html
+++ b/E and p.html
@@ -147,7 +147,7 @@ body{
                     <img src="logo.jpg" alt="Mr Bean" width= 400px height="200px" class="img" >
                            </div>
             <div class="column">
-                    <img src="C:\Users\shweta-win\Downloads\pjimage (1).jpg"  alt="Mr Bean's Teddy" width= 400px height="200px" class="img" >
+                    <img src="pjimage (1).jpg"  alt="Mr Bean's Teddy" width= 400px height="200px" class="img" >
             </div>
             <div class="column">
                     <img src="mrs wicket.jpg"  alt="Mrs. Wicket" width= 400px height="200px" class="img" >
@@ -156,7 +156,7 @@ body{
                     <img src="scapper.jpg"  alt="Scapper" width= 400px height="200px" class="img" >
         </div>
             <div class="column">
-                    <img src="C:\Users\shweta-win\Downloads\pjimage.jpg"  alt="Irma Gobb" width= 400px height="200px" class="img" >
+                    <img src="pjimage.jpg"  alt="Irma Gobb" width= 400px height="200px" class="img" >
                     <center> <h2 class="head"> <u> Supporting Characters</h2></center></u>
                 
           </div>
